# nasap-net

./: .gitignore  404.html  README.md  RELEASING.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: pytest.yml  release.yml
CLI/: index.html
CLI/assembly-enumeration/: index.html
CLI/assembly-list-concatenation/: index.html
CLI/reaction-exploration/: index.html
Python-package/: index.html
docs/: .nav.yml  index.md
docs/CLI/: index.md
docs/Python-package/: index.md
docs/assets.h/: isom_check_example.py
examples/: README.md
examples/M4L4_reaction_classification/: M4L4_reaction_classification.ipynb
recsa/: __init__.py  exceptions.py
recsa/algorithms/: __init__.py  assembly_connectivity.py  assembly_equality.py  aux_edge_existence.py  bondset_sorting.py  component_equivalence.py  hashing.py  isomorphic_assembly_search.py  isomorphism_application_to_mle.py  mle_search.py  reaction_comparison.py  reaction_embedding.py  subassembly.py  union.py
recsa/assembly_drawing/: __init__.py  drawing_2d.py  drawing_3d.py  loading.py  pipeline.py  positioning.py
recsa/assembly_enumeration/: __init__.py  core.py  from_file.py  pipeline.py
recsa/bindsite_capping/: __init__.py  from_file.py  loading.py  multi_assemblies.py  multi_bindsites.py  pipeline.py  single_bindsite.py
recsa/bondset_enumeration/: __init__.py  core.py  exceptions.py  from_file.py  loading.py  pipeline.py
recsa/bondset_to_assembly/: __init__.py  (+4 more)
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
(+531 files in other folders)
